<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".SignupPage">

    <TextView
        android:id="@+id/cr"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="GoToSignInPage"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"  />

    <TextView
        android:id="@+id/hello_below"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Glad You're Here"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SUdata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintVertical_bias="0.64" />

    <LinearLayout

        android:id="@+id/SUdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/error_message_display_txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorRed"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_person_black_24dp" />

            <EditText
                android:id="@+id/SUname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:background="@android:color/transparent"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/full_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_email_black_24dp" />

            <EditText
                android:id="@+id/SUemail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:background="@android:color/transparent"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/email_id"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_contact_phone_black_24dp" />

            <EditText
                android:id="@+id/phoneStart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:elegantTextHeight="true"
                android:ems="5"
                android:hint="+92"
                android:inputType="phone"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAlignment="textStart"
                android:textColorHint="@color/black" />


            <EditText
                android:id="@+id/SUphone"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="7.8"
                android:background="@android:color/transparent"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="321 8818802"
                android:inputType="phone"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAlignment="textStart"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/SUlock"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_lock_outline_black_24dp" />

            <EditText
                android:id="@+id/SUedt_password1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@android:color/transparent"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black" />

            <ImageView
                android:id="@+id/eye1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="eyeClicked"
                android:src="@drawable/hide_password" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:src="@android:color/transparent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/SUlock1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/ic_lock_outline_black_24dp" />

            <EditText
                android:id="@+id/SUedt_password2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@android:color/transparent"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="Confirm Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black" />

            <ImageView
                android:id="@+id/eye2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="eyeClicked1"
                android:src="@drawable/hide_password" />


        </LinearLayout>


    </LinearLayout>

    <!--<LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SUdata"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2">-->

    <!--</LinearLayout>-->

    <ImageView
        android:id="@+id/signInbtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="end"
        android:background="@drawable/arrow_next"
        android:defaultFocusHighlightEnabled="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SUdata"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:gravity="end|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/sign_up_with"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/google"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/google"
            android:defaultFocusHighlightEnabled="true"
            android:focusable="true" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb"
            android:layout_width="28dp"
            android:layout_height="50dp"
            android:focusable="true" />


        <!--style="@style/FacebookLoginButton"-->
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>