...
    <string name="title_home">Presentation</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="Welcome">Welcome</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="email_id">Email ID</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="full_name">Full Name</string>
...
