...


        <!--style="@style/FacebookLoginButton"-->
    </LinearLayout>

    <TextView
        android:id="@+id/SignUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
...
